Fix Menu open by default on small devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,6 +264,10 @@ li.dropdown{
 		float: none;
 	}
 
+	.nav {
+		display: none;
+	}
+
 }
 
 .footer {
